[gd_scene load_steps=5 format=3 uid="uid://w5hyqkdawviv"]

[ext_resource type="Script" path="res://Main_Scenes/game_scene.gd" id="1_67qkg"]
[ext_resource type="Texture2D" uid="uid://c1gh8s1jlp1e2" path="res://Images/game background.png" id="1_qb1rf"]
[ext_resource type="PackedScene" uid="uid://c7k44a51dy652" path="res://Platforms/platform.tscn" id="2_xjsu1"]
[ext_resource type="PackedScene" uid="uid://c7b43vmksp4l7" path="res://Platforms/sell_platform.tscn" id="6_2ambm"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_67qkg")

[node name="GameBackground" type="Sprite2D" parent="."]
scale = Vector2(1.76563, 1.63107)
texture = ExtResource("1_qb1rf")
centered = false

[node name="RerollButton" type="Button" parent="."]
offset_left = 216.0
offset_top = 928.0
offset_right = 440.0
offset_bottom = 984.0
theme_override_font_sizes/font_size = 30
text = "Reroll: 2 gold"

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 456.0
offset_top = 824.0
offset_right = 1336.0
offset_bottom = 1000.0
mouse_filter = 2
color = Color(0, 0.305882, 0.305882, 0.882353)

[node name="Platforms" type="Node2D" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(384, 504)

[node name="Platform2" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(512, 504)

[node name="Platform3" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(640, 504)

[node name="Platform4" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(768, 504)

[node name="Platform5" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(896, 504)

[node name="Platform6" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1024, 504)

[node name="Platform7" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1152, 504)

[node name="Platform8" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1280, 504)

[node name="Platform9" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1408, 504)

[node name="Platform10" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(384, 632)

[node name="Platform11" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(512, 632)

[node name="Platform12" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(640, 632)

[node name="Platform13" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(768, 632)

[node name="Platform14" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(896, 632)

[node name="Platform15" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1024, 632)

[node name="Platform16" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1152, 632)

[node name="Platform17" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1280, 632)

[node name="Platform18" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1408, 632)

[node name="Platform19" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(384, 760)

[node name="Platform20" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(512, 760)

[node name="Platform21" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(640, 760)

[node name="Platform22" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(768, 760)

[node name="Platform23" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(896, 760)

[node name="Platform24" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1024, 760)

[node name="Platform25" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1152, 760)

[node name="Platform26" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1280, 760)

[node name="Platform27" parent="Platforms" instance=ExtResource("2_xjsu1")]
position = Vector2(1408, 760)

[node name="Sell_Platform" parent="Platforms" instance=ExtResource("6_2ambm")]
position = Vector2(1472, 912)

[node name="Cookies" type="Node2D" parent="."]

[node name="Milks" type="Node2D" parent="."]

[node name="Shop" type="Node2D" parent="."]

[node name="Timer" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="Timer"]
wait_time = 10.0

[node name="TimerText" type="Label" parent="Timer"]
offset_left = 720.0
offset_top = 32.0
offset_right = 1072.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 50
text = "Prepare: 10"
horizontal_alignment = 1

[node name="Projectile" type="Node2D" parent="."]

[node name="Gold" type="Label" parent="."]
offset_left = 216.0
offset_top = 840.0
offset_right = 432.0
offset_bottom = 912.0
theme_override_font_sizes/font_size = 50
text = "Gold: "
horizontal_alignment = 1

[node name="Round" type="Label" parent="."]
offset_left = 792.0
offset_top = 112.0
offset_right = 1008.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 50
text = "Round 0"
horizontal_alignment = 1

[node name="Pause" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Pause"]
offset_right = 1808.0
offset_bottom = 1008.0
color = Color(0.333333, 0.52549, 0.584314, 0.788235)

[node name="Label" type="Label" parent="Pause"]
offset_left = 720.0
offset_top = 144.0
offset_right = 1072.0
offset_bottom = 281.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="Pause"]
offset_left = 584.0
offset_top = 376.0
offset_right = 1216.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 50
text = "Resume
"

[node name="MainMenuButton" type="Button" parent="Pause"]
offset_left = 584.0
offset_top = 624.0
offset_right = 1216.0
offset_bottom = 744.0
theme_override_font_sizes/font_size = 50
text = "Back to main menu"

[node name="Percentage" type="Node2D" parent="."]

[node name="Bg" type="ColorRect" parent="Percentage"]
light_mask = 2
visibility_layer = 2
offset_top = 808.0
offset_right = 184.0
offset_bottom = 1000.0
mouse_filter = 2
color = Color(0, 0.305882, 0.305882, 0.882353)

[node name="Common" type="Label" parent="Percentage"]
offset_left = 64.0
offset_top = 808.0
offset_right = 192.0
offset_bottom = 850.0
theme_override_font_sizes/font_size = 30
text = "80%"
vertical_alignment = 1

[node name="CommonColor" type="ColorRect" parent="Percentage"]
offset_left = 16.0
offset_top = 816.0
offset_right = 48.0
offset_bottom = 848.0
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="Uncommon" type="Label" parent="Percentage"]
offset_left = 64.0
offset_top = 856.0
offset_right = 192.0
offset_bottom = 898.0
theme_override_font_sizes/font_size = 30
text = "20%"
vertical_alignment = 1

[node name="UncommonColor" type="ColorRect" parent="Percentage"]
offset_left = 16.0
offset_top = 864.0
offset_right = 48.0
offset_bottom = 896.0
color = Color(0.235294, 0.823529, 0, 1)

[connection signal="pressed" from="RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="timeout" from="Timer/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Pause/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Pause/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
